Adjust styles, add images for new microsite, delete unused image.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		
 		<div class="main-content wrap text-center">
 
-			<p>Do your loan payments keep you down? Would you like to pay less each month? Have credit issues or loan denials kept you from applying in the past?</p>
-			<h2>We can help!</h2>
+			<h2>If we can't cut your auto loan payment, we'll give you $100!*</h2>
+			<h3>Take advantage while the offer is still in style!</h3>
 			<p><a href="https://www5.homecu.net/fi/pafcu/loan-application.html"><img src="img/button-apply.png"></a></p>
 
 		</div>
@@ -45,7 +45,7 @@
 				</div>
 
 				<div class="fine-print group">
-					Federally insured by the National Credit Union Administration. 
+					Offer subject to credit approval. Peoples Advantage Payment Cut program is meant to save members money. However, the rate offered to each member will not go below the members qualified rate. Verification of current payment is required. Loans currently financed with the credit union are not eligible for this offer. Collateralized loans may not exceed 100% Loan to Value and have a term no greater than 60 months. Unsecured loans may not exceed the borrowers suggested unsecured limits based on credit union policy. Credit cards do not apply. Any exception to the credit union loan policy will not be honored. Rate subject to change at any time without notice. Offer may end at any time. For complete details, contact the credit union. Federally insured by the National Credit Union Administration. 
 				</div>
 
 			</div>
